# piedpiper

./: .env.example  .gitignore  PLAN.md  README.md  REDIS_REORGANIZATION.md  REDIS_SETUP_COMPLETE.md  REDIS_TEST_RESULTS.md  STATUS.md  TASKS.md  TODO.md  docker-compose.yml
.windsurf/skills/browserbase/: SKILL.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/scripts/: init-db.sql
backend/src/piedpiper/: config.py  main.py
backend/src/piedpiper/agents/: arbiter.py  expert.py  learning.py  worker.py
backend/src/piedpiper/api/: events.py  routes.py
backend/src/piedpiper/infra/: browserbase.py  circuit_breaker.py  cost.py  memory.py  search.py  tracing.py
backend/src/piedpiper/infra/redis/: README.md  __init__.py  embeddings.py  memory.py  search.py
backend/src/piedpiper/models/: __init__.py  cost.py  queries.py  review.py  state.py  validation.py
backend/src/piedpiper/review/: queue.py  router.py
backend/src/piedpiper/workflow/: graph.py  nodes.py
backend/tests/: test_redis_cloud_complete.py  test_redis_connection.py  test_redis_integration.py
docs/: redis-cloud-setup.md  redis-implementation.md
frontend/app/: layout.tsx  page.tsx
frontend/app/review/: page.tsx
frontend/lib/: api.ts
